app/styles/app.scss
$primary: "blue" !default;

@import 'ember-paper';

@import 'publishing';
@import 'directory';
@import 'upload';
@import 'file';
@import 'clients';
@import 'about';

body, #content {
  background-color: #f3f3f3;
}

#content {
  min-height: 100vh;
}

md-toolbar {
  min-height: 48px;

  .md-toolbar-tools {
    height: 48px;
  }
}

md-toolbar .title {
  display: inline-block;
  margin-right: 100px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.breadcrumb {
  display: inline-block;

  .full {
    display: inline-block;
  }

  .parent-only {
    display: none;
  }

  a {
    text-decoration: underline;
  }
}

md-content p.content {
  padding: 2em 1em;
}

md-sidenav {
  min-height: 100vh;
  text-align: left;

  md-list-item .md-list-item-inner md-icon {
    flex: 1;
  }
}

.material-icons {
  line-height: 0.8
}

@media (max-width: 550px) {
  .md-toolbar-tools {
    padding: 0 !important;
  }

  md-toolbar .title {
    margin-right: 55px;
  }

  .breadcrumb .full {
    display: none;
  }

  .breadcrumb .parent-only {
    display: inline-block;
  }
}

.notfound {
  .huge {
    font-weight: bold;
    color: #BBB;
    font-size: 5em;
    text-align: center;
    justify-content: center;
    padding-top: 1em;
    padding-bottom: 0.2em;
  }

  .description {
    text-align: center;
  }
}

